--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -23,11 +23,10 @@ permalink: /coinshark/privacypolicy
     <p>Link to privacy policy of third party service providers used by the app</p>
 
     <ul>
-        <li>Google Play Services</li>
-        <li>Log Data</li>
+        <li><a href='https://policies.google.com/privacy'>Google Play Services</a></li>
+        <li><a href='https://coinmarketcap.com/privacy/'>Coinmarketcap</a></li>
+        <li><a href='https://ethplorer.io/privacy'>Ethplorer.io</a></li>
     </ul>
-
-    <p>I want to inform you that whenever you use my Service, in a case of an error in the app I collect data and information (through third party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing my Service, the time and date of your use of the Service, and other statistics.</p>
 
     <h2>Cookies</h2>
 
