More responsive iframe

--- a/vacation.html
+++ b/vacation.html
@@ -6,7 +6,7 @@ permalink: /summer/vacation
 
 <div class="vacation">
 
-    <iframe src='https://onedrive.live.com/embed?resid=66C3FA5D0D65F52E%21344&authkey=%21AJOobAf8P3cFnBU&em=2&wdAr=1.3333333333333333'
+    <iframe style='max-width: 100%' src='https://onedrive.live.com/embed?resid=66C3FA5D0D65F52E%21344&authkey=%21AJOobAf8P3cFnBU&em=2&wdAr=1.3333333333333333'
             width='722px' height='565px' frameborder='0'>This is an embedded <a target='_blank'
                                                                                 href='https://office.com'>Microsoft
         Office</a> presentation, powered by <a target='_blank' href='https://office.com/webapps'>Office Online</a>.
