Added worktime - removed vacation

--- a/privacypolicy_worktime.html
+++ b/privacypolicy_worktime.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: CoinShark Privacy Policy
-permalink: /coinshark/privacypolicy
+title: WorkTime Privacy Policy
+permalink: /worktime/privacypolicy
 ---
 
 <div class="privacypolicy">
