--- a/privacypolicy_worktime.html
+++ b/privacypolicy_worktime.html
@@ -6,17 +6,17 @@ permalink: /worktime/privacypolicy
 
 <div class="privacypolicy">
 
-    <p>CaroSoft built the CoinShark app as a Free app. This SERVICE is provided by CaroSoft at no cost and is intended for use as is.</p>
+    <p>CaroSoft built the WorkTime app as a Free app. This SERVICE is provided by CaroSoft at no cost and is intended for use as is.</p>
 
     <p>This page is used to inform users regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.</p>
 
     <p>If you choose to use my Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that I collect is used for providing and improving the Service. I will not use or share your information with anyone except as described in this Privacy Policy.</p>
 
-    <p>The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at CoinShark unless otherwise defined in this Privacy Policy.</p>
+    <p>The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at WorkTime unless otherwise defined in this Privacy Policy.</p>
 
     <h2>Information Collection and Use</h2>
 
-    <p>CoinShark does not explicitly require or collect any personal information or data. All information that might be requested is retained on your device only and is not collected by me in any way</p>
+    <p>WorkTime does not explicitly require or collect any personal information or data. All information that might be requested is retained on your device only and is not collected by me in any way</p>
 
     <p>The app does use third party services that may collect information used to identify you.</p>
 
@@ -24,8 +24,6 @@ permalink: /worktime/privacypolicy
 
     <ul>
         <li><a href='https://policies.google.com/privacy'>Google Play Services</a></li>
-        <li><a href='https://coinmarketcap.com/privacy/'>Coinmarketcap</a></li>
-        <li><a href='https://ethplorer.io/privacy'>Ethplorer.io</a></li>
     </ul>
 
     <h2>Cookies</h2>
