WorkTime update policies 2

--- a/privacypolicy_worktime.html
+++ b/privacypolicy_worktime.html
@@ -6,7 +6,7 @@ permalink: /worktime/privacypolicy
 
 <div class="privacypolicy">
 
-    <p>CaroSoft built the WorkTime app as a Free app. This SERVICE is provided by CaroSoft at no cost and is intended for use as is.</p>
+    <p>This SERVICE is provided by CaroSoft and is intended for use as is.</p>
 
     <p>This page is used to inform users regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.</p>
 
